# talkito

./: .env.example  .gitignore  .gitmodules  CONTRIBUTING.md  MANIFEST.in  README.md  install.sh  install_with_uv.sh  pyproject.toml  setup.py  talkito.sh  uninstall.sh
docs/: CNAME  index.html  package-lock.json  package.json  robots.txt  script.js  styles.css
extensions/chrome/: README.md  background.js  content.js  index.html  manifest.json  popup.html  popup.js
talkito/: __init__.py  __main__.py  __version__.py  api.py  asr.py  claude.py  claude_init.py  cli.py  clients.py  comms.py  config.py  core.py  logs.py  mcp.py  mcp_server.py  mcp_sse.py  models.py  patterns.py  profiles.py  state.py  status.py  templates.py  tts.py  update.py  voices.py
talkito/.claude/: settings.local.json
